--- a/eww/.config/eww/src/scss/bar/index.scss
+++ b/eww/.config/eww/src/scss/bar/index.scss
@@ -1,6 +1,7 @@
 @import "./bar";
 @import "./widgets/action-center";
 @import "./widgets/battery";
+@import "./widgets/temperature";
 @import "./widgets/calendar";
 @import "./widgets/launcher";
 @import "./widgets/apps.scss";
