added pill shaped sections

--- a/eww/.config/eww/src/scss/_overrides.scss
+++ b/eww/.config/eww/src/scss/_overrides.scss
@@ -10,6 +10,6 @@ window {
 tooltip {
   background-color: $background-tertiary;
   border-radius: 4px;
-  font-family: "DM Sans";
+  font-family: "Roboto";
   font-size: 14px;
 }
