--- a/eww/.config/eww/src/scss/_variables.scss
+++ b/eww/.config/eww/src/scss/_variables.scss
@@ -22,7 +22,7 @@ $javacafeCyan: #c7e5d6;
 $foreground-alt: #8f8f8f;
 $module-fg: #1f1f1f;
 // transparent background. Due to the aa at the start
-$background: #aa1a2026;
+$background: #1a2026;
 $foreground: #ffffff;
 $cursorColor: #ffffff;
 $color0: #242d35;
