--- a/eww/.config/eww/src/scss/bar/widgets/_apps.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_apps.scss
@@ -1,6 +1,6 @@
 .apps {
   margin-left: 2.2em;
-  margin-bottom: 2px;
+  // margin-bottom: 2px;
   font-size: 1.3em;
   color: $foreground-alt;
   button {
