--- a/eww/.config/eww/src/scss/bar/widgets/_battery.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_battery.scss
@@ -2,13 +2,7 @@
   .bat-progress {
     margin: 0.5em 0em 0.7em;
     background-color: #50906a;
-    color: $green;
-
-    .bat-icon {
-      font-size: 2.5em;
-
-      margin: 0.4em;
-    }
+    background-color: $green;
   }
   label {
     font-family: "FantasqueSansMono Nerd Font";
@@ -20,16 +14,19 @@
   .Full {
     font-weight: 900;
     font-size: 1.3em;
-    margin-top: 0.5em;
+    border-radius: 300em;
+    padding: 0.5em 1em;
+    margin: 0.5em 0.5em;
   }
   .Charging,
   .Unknown {
-    color: $color4;
+    background-color: $color4;
   }
   .Discharging {
-    color: $color5;
+    background-color: $color5;
   }
   .Full {
-    color: $color10;
+    background-color: $color10;
+    color: $color0;
   }
 }
