--- a/eww/.config/eww/src/scss/bar/widgets/_launcher.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_launcher.scss
@@ -1,12 +1,11 @@
 .launcher {
-  margin: 0.5em 0.5em 0.5em 1em;
-  border-radius: 6px;
-
+  margin: 0.2em 1em 0 0;
+  border-radius: 30em;
   button {
     border-radius: inherit;
     margin: 0.1em;
     margin-right: 0.5em;
-    padding: 0em 0.5em;
+    padding: 0 1em;
     color: #000;
     font-size: 1.5em;
     background-color: $color1;
