--- a/eww/.config/eww/src/scss/bar/widgets/_workspaces.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_workspaces.scss
@@ -1,15 +1,17 @@
 .ws {
   font-size: 1.3em;
   font-family: "FantasqueSansMono Nerd Font";
-  margin-top: 0.55em;
+  // margin-top: 0.55em;
   button:not(:last-child) {
     // background-color: #f5f5f5;
     margin-right: 0.5em;
   }
+  label {
+    padding: 0.5em;
+    margin: 0;
+  }
 }
 .visible > label {
-  padding: 0.5em;
-  margin: 0;
   border-bottom: 1px solid $color8;
 }
 .visible,
@@ -24,11 +26,9 @@
   border-bottom: 1px solid $color1;
 }
 .sep {
-  // background-color: #00f;
-  // color: #fff
   color: $color4;
   font-weight: 800;
-  font-size: 1em;
+  font-size: 1.3em;
   margin-right: 0.75em;
   margin-left: 0.25em;
 }
