--- a/eww/.config/eww/src/scss/bar/widgets/_battery.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_battery.scss
@@ -21,6 +21,7 @@
   .Charging,
   .Unknown {
     background-color: $color4;
+    color: black;
   }
   .Discharging {
     background-color: $color5;
