--- a/eww/.config/eww/src/scss/bar/widgets/_calendar.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_calendar.scss
@@ -1,46 +1,47 @@
 .cal-window {
-	background-color: $darker-background;
-	border-radius: 10px;
-	font-family: "Roboto";
+  // background-color: $darker-background;
+  background-color: rgba(26, 32, 38, 0.7);
+  border-radius: 10px;
+  font-family: "Roboto";
 
-	.cal-box {
-		margin: 1em 0.75em .25em;
+  .cal-box {
+    margin: 1em 0.75em 0.25em;
 
-		.month-year {
-			font-size: 18px;
-			font-weight: bold;
-			margin: 0.5em 0em 0em;
-		}
+    .month-year {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 0.5em 0em 0em;
+    }
 
-		.day-names {
-			margin: 1em .75em 0em;
-			font-size: 14px;
-			font-weight: bold;
-			color: $green;
-		}
-	
-		.cal {
-			font-family: "Roboto";
-			padding: 1em .75em 0em;
-		}
-	}
+    .day-names {
+      margin: 1em 0.75em 0em;
+      font-size: 14px;
+      font-weight: bold;
+      color: $green;
+    }
+
+    .cal {
+      font-family: "Roboto";
+      padding: 1em 0.75em 0em;
+    }
+  }
 }
 
 calendar {
-	&:selected {
-		color: $accent;
-	}
-	&:indeterminate {
-		color: rgba(205, 219, 249, 0.3);
-	}
+  &:selected {
+    color: $accent;
+  }
+  &:indeterminate {
+    color: rgba(205, 219, 249, 0.3);
+  }
 }
 
 calendar.button {
-	color: #192022;
+  color: #192022;
 }
 calendar.highlight {
-	color: $green;
-	font-weight: bold;
-	padding: 20px;
-	margin: 20px;
+  color: $green;
+  font-weight: bold;
+  padding: 20px;
+  margin: 20px;
 }
