--- a/eww/.config/eww/src/scss/dashboard/_dashboard.scss
+++ b/eww/.config/eww/src/scss/dashboard/_dashboard.scss
@@ -1,11 +1,10 @@
 .dashboard-window {
-	.dashboard-spacer {
-		transition: all 1800ms cubic-bezier(.1, -0.00, .0, 1.49);
-	}
-	
-	.dashboard-box {
-		background-color: $darker-background;
-		border-radius: 10px;
-		padding: 2em;
-	}
+  .dashboard-spacer {
+    transition: all 1800ms cubic-bezier(0.1, -0, 0, 1.49);
+  }
+  .dashboard-box {
+    background-color: rgba(11, 15, 16, 0.5);
+    border-radius: 10px;
+    padding: 2em;
+  }
 }
