--- a/eww/.config/eww/src/scss/dashboard/rows/_fourth-row.scss
+++ b/eww/.config/eww/src/scss/dashboard/rows/_fourth-row.scss
@@ -1,21 +1,59 @@
 .dashboard-box {
-	.system-btn {
-		margin-top: 1em;
-		padding: 1em 1.5em;
-		background-color: $background-primary;
-		border-radius: 5px;
-
-		button {
-			font-size: 28px;
-			margin: .2em .3em;
-			padding: .4em;
-			background-color: $background-secondary;
-			border-radius: 30%;
-			font-family: "Material Icons";
-
-			&:hover {
-				color: $accent;
-			}
-		}
-	}
+  .system-btn {
+    margin-top: 1em;
+    padding: 1em 1.5em;
+    background-color: $background;
+    border-radius: 5px;
+    button {
+      font-size: 28px;
+      margin: 0.2em 0.3em;
+      padding: 0.5em 0.5em 0.5em 0;
+      background-color: $color0;
+      border-radius: 100%;
+      font-family: "FontAwesome";
+      &:hover {
+        color: $accent;
+      }
+    }
+    .dnd-btn,
+    .jeff-btn {
+      padding: 0em;
+    }
+    .dnd-btn > label {
+      font-family: "Material\-Design\-Iconic\-Font";
+    }
+    .dnd__active {
+      background-image: linear-gradient(45deg, $color12, $color13);
+      color: #000;
+    }
+    .dnd__active:hover {
+      color: black;
+      background-image: linear-gradient(45deg, $color4, $color5);
+    }
+    .dnd__disabled {
+      background-image: linear-gradient(90deg, $color8, $color0);
+    }
+    .network__disabled {
+      background-image: linear-gradient(90deg, $color8, $color0);
+    }
+    .network__active {
+      background-image: linear-gradient(45deg, $color3, $color9);
+      color: black;
+    }
+    .network__active:hover {
+      color: black;
+      background-image: linear-gradient(45deg, $color3, $color1);
+    }
+    .jeff__active {
+      color: #000;
+      background-image: linear-gradient(45deg, $color10, $color12);
+    }
+    .jeff__active:hover {
+      color: black;
+      background-image: linear-gradient(45deg, $color2, $color4);
+    }
+    .jeff__disabled {
+      background-image: linear-gradient(90deg, $color8, $color0);
+    }
+  }
 }
