--- a/eww/.config/eww/src/scss/dashboard/rows/_third-row.scss
+++ b/eww/.config/eww/src/scss/dashboard/rows/_third-row.scss
@@ -48,6 +48,7 @@
         border-radius: 2em;
         color: $foreground-tertiary;
         font-size: 24px;
+        font-family: "MATERIAL-DESIGN-ICONIC-FONT";
       }
 
       .volume {
@@ -70,7 +71,7 @@
         }
 
         .bribar trough highlight {
-          background-image: linear-gradient(to top, #de8f78, $yellow);
+          background-image: linear-gradient(to top, #de8f78, $color3);
           border-radius: 10px;
         }
       }
@@ -78,7 +79,7 @@
         margin: 0.5em 0em 0.5em -1em;
 
         .micbar trough highlight {
-          background-image: linear-gradient(to top, $blue-desaturated, $blue);
+          background-image: linear-gradient(to top, $color4, $color5);
           border-radius: 10px;
         }
       }
