added different avatar

--- a/eww/.config/eww/src/scss/dashboard/rows/_first-row.scss
+++ b/eww/.config/eww/src/scss/dashboard/rows/_first-row.scss
@@ -5,7 +5,7 @@
 
       .avatar {
         .avatar-image {
-          background-image: url("./assets/avatar.png");
+          background-image: url("./assets/ayanokji-kiyotaka-avatar.png");
           background-size: cover;
           min-height: 144px;
           border-radius: 5px;
