--- a/eww/.config/eww/src/scss/dashboard/_dashboard.scss
+++ b/eww/.config/eww/src/scss/dashboard/_dashboard.scss
@@ -1,10 +1,12 @@
 .dashboard-window {
   .dashboard-spacer {
-    transition: all 1800ms cubic-bezier(0.1, -0, 0, 1.49);
+    transition: all 1800ms cubic-bezier(0.01, 0, 0, 0.49);
   }
   .dashboard-box {
-    background-color: rgba(11, 15, 16, 0.5);
+    // background-color: rgba(11, 15, 16, 0.5);
+    // background-color: rgba(0, 0, 0, 0.5);
+    background: none;
     border-radius: 10px;
-    padding: 2em;
+    padding: 0;
   }
 }
