--- a/eww/.config/eww/src/scss/bar/widgets/_workspaces.scss
+++ b/eww/.config/eww/src/scss/bar/widgets/_workspaces.scss
@@ -36,7 +36,7 @@
   font-family: "FontAwesome";
   color: $color4;
   font-weight: 800;
-  font-size: 1.3em;
+  // font-size: 1.3em;
   margin-right: 0.75em;
   margin-left: 0.25em;
 }
