--- a/bars/.config/waybar/style.css
+++ b/bars/.config/waybar/style.css
@@ -171,7 +171,12 @@ window#waybar.hidden {
  * -------------------------------------------------------------------------- */
 
 #custom-spotify {
-  background-color: #bb9af7;
+  background-image:linear-gradient(
+  90deg,
+  #78a0f7 0%,
+  #9c9df7 48%,
+  #bc9cf7 100%
+  );
   padding: 0 10px;
 }
 #custom-pacman {
