--- a/misc/.config/misc/searx-tokyo-night.user.css
+++ b/misc/.config/misc/searx-tokyo-night.user.css
@@ -1,11 +1,11 @@
 /* ==UserStyle==
 @name         Searx Tokyo Night
-@description  The adoption of the Solarized colour theme for Searx.
-@namespace    codeberg.org/maxigaz/searx-solarized
-@author       maxigaz
+@description  The adoption of the Tokyo Night theme for Searx.
+@namespace    https://github.com/Arjun31415/dotfiles/tree/hyprland/misc/.config/mis
+c@author      Arjun31415
 @license      GPL-3.0-or-later
-@homepageURL  https://codeberg.org/maxigaz/searx-solarized
-@updateURL    https://codeberg.org/maxigaz/searx-solarized/raw/master/searx-solarized.user.css
+@homepageURL  https://github.com/Arjun31415/dotfiles/tree/hyprland/misc/.config/misc
+@updateURL    https://github.com/Arjun31415/dotfiles/blob/hyprland/misc/.config/misc/searx-tokyo-night.user.css
 @version      1.2.2
 
 @preprocessor uso
@@ -66,7 +66,10 @@ domain("/*[[customDomain]]*/") {
     --alert-bg: ; /*[[alert-bg]]*/
   }
   .index .title {
-    fill: url("./custom-graident.svg#gradient-horizontal");
+    background-image: url("");
+    fill: url("https://github.com/Arjun31415/dotfiles/blob/hyprland/misc/.config/misc/custom-gradient.svg#gradient-horizontal");
+    background-repeat: no-repeat;
+    fill: green;
   }
   #search_header {
     background-image: linear-gradient(
