--- a/bars/.config/eww/src/scss/dashboard/_dashboard.scss
+++ b/bars/.config/eww/src/scss/dashboard/_dashboard.scss
@@ -4,8 +4,8 @@
   }
   .dashboard-box {
     // background-color: rgba(11, 15, 16, 0.5);
-    // background-color: rgba(0, 0, 0, 0.5);
-    background: none;
+    background-color: rgba(0, 0, 0, 1);
+    // background: none;
     border-radius: 10px;
     padding: 0;
   }
